# the-life

./: .gitignore  CLAUDE.md  HANDOFF.md  docker-compose.yml
backend/: .env.example  Dockerfile  config.yaml  pyproject.toml
backend/app/: config.py  cycle_engine.py  llm_client.py  main.py  moderation.py  personality.py
backend/app/api/: admin_routes.py  admin_schemas.py  auth.py  helpers.py  routes.py  schemas.py
backend/app/memory/: __init__.py  chromadb_store.py  novelty.py
backend/app/prompts/: creation.py  decision.py  system.py
backend/app/storage/: __init__.py  file_store.py  sqlite_store.py
backend/app/tools/: brave_search.py  custom_api_provider.py  image_gen.py  music_gen.py  registry.py  search_factory.py  search_provider.py  tavily_search.py  video_gen.py  web_search.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_admin_routes.py  test_api.py  test_auth.py  test_chromadb_store.py  test_config.py  test_cycle_engine.py  test_file_store.py  test_image_gen.py  test_llm_client.py  test_moderation.py  test_music_gen.py  test_novelty.py  test_prompts.py  test_search_providers.py  test_sqlite_store.py  test_tool_registry.py  test_web_search.py
docs/: adding-tools.md  architecture.md
docs/superpowers/specs/: 2026-03-31-the-life-design.md
frontend/: .env.example  Dockerfile  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/src/components/: BehindScenes.astro  CommentSection.tsx  Graph.tsx  Hero.astro  RoomCard.astro  RoomDetail.tsx  RoomPanel.tsx  StatsBar.astro  StatsCharts.tsx  (+1 more)
(+24 files in other folders)
